--- a/rebecca/stock-api-server/Gemfile
+++ b/rebecca/stock-api-server/Gemfile
@@ -20,6 +20,7 @@ group :assets do
 end
 
 gem 'jquery-rails'
+gem 'nokogiri', '~> 1.7.0.1'
 gem 'rubocop', '~> 0.47.1', require: false
 
 # To use ActiveModel has_secure_password
