--- a/chloe/auto_stock_server/Gemfile
+++ b/chloe/auto_stock_server/Gemfile
@@ -7,7 +7,6 @@ gem 'rails', '3.2.22.1'
 
 gem 'sqlite3'
 
-
 # Gems used only for assets and not required
 # in production environments by default.
 group :assets do
@@ -38,3 +37,5 @@ gem 'jquery-rails'
 # gem 'debugger'
 
 gem 'nokogiri'
+
+gem 'rubocop', '~> 0.47.1', require: false
