--- a/chloe/auto_stock_server/Gemfile
+++ b/chloe/auto_stock_server/Gemfile
@@ -39,3 +39,9 @@ gem 'jquery-rails'
 gem 'nokogiri'
 
 gem 'rubocop', '~> 0.47.1', require: false
+
+gem 'font-awesome-sass'
+
+gem 'autoprefixer-rails'
+
+gem 'bootstrap-sass', '~> 3.2.0'
