--- a/chloe/auto_stock_server/Gemfile
+++ b/chloe/auto_stock_server/Gemfile
@@ -45,3 +45,8 @@ gem 'font-awesome-sass'
 gem 'autoprefixer-rails'
 
 gem 'bootstrap-sass', '~> 3.2.0'
+
+group :test, :development do
+  gem 'factory_girl_rails', '~> 4.0'
+  gem 'rspec-rails', '~> 3.5'
+end
