--- a/rebecca/stock-api-server/Gemfile
+++ b/rebecca/stock-api-server/Gemfile
@@ -19,6 +19,10 @@ group :assets do
   gem 'uglifier', '>= 1.0.3'
 end
 
+group :test, :development do
+  gem 'rspec-rails'
+end
+
 gem 'jquery-rails'
 gem 'nokogiri', '~> 1.7.0.1'
 gem 'rubocop', '~> 0.47.1', require: false
