--- a/chloe/auto_stock_server/Gemfile
+++ b/chloe/auto_stock_server/Gemfile
@@ -53,6 +53,8 @@ gem 'bootstrap-sass', '~> 3.2.0'
 # Cron job in Ruby
 gem 'whenever', require: false
 
+gem 'angularjs-rails', '~> 1.4.7'
+
 group :test, :development do
   # Use capybara to simulate the browser behavior for view test
   gem 'capybara', '2.12.0'
