--- a/wayne/stock_api_server/docker-compose.ci.yml
+++ b/wayne/stock_api_server/docker-compose.ci.yml
@@ -3,3 +3,6 @@ services:
   db:
     expose:
       - "5432" # Not exposing port externally because it conflicts a port used by Travis
+  web:
+    expose:
+      - "3000"
