--- a/.travis.yml
+++ b/.travis.yml
@@ -2,46 +2,29 @@ sudo: required
 
 language: ruby
 
+cache:
+  bundler: true
+
 rvm:
   - 2.1.5
 
 services:
-  - docker
-
-env:
-  - DOCKER_COMPOSE_VERSION: 1.11.2
+  - postgresql
+addons:
+  postgresql: '9.6'
 
 branches:
   only:
     - dev/wayne
 
 before_install:
-  # install docker-compose at specific version
-  - sudo rm /usr/local/bin/docker-compose
-  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - chmod +x docker-compose
-  - sudo mv docker-compose /usr/local/bin
-  # show version
-  - docker -v
-  - docker-compose -v
-
-install:
   # go to project folder
   - cd ./wayne/stock_api_server/
-  - docker-compose build
+  - cp config/database.travis.yml config/database.yml
 
 before_script:
-  # '-f' Specify an alternate compose file (default: docker-compose.yml)
-  # You can supply multiple '-f'' configuration files. 
-  # When you supply multiple files, Compose combines them into a single configuration. 
-  - docker-compose -f docker-compose.yml -f docker-compose.ci.yml up -d
-  - docker ps
-  - docker-compose run web rake db:create db:migrate RAILS_ENV=test
+  - cp config/database.travis.yml config/database.yml
+  - bundle exec rake db:drop db:create db:migrate RAILS_ENV=test
 
 script:
-  # run unit test
-  - docker-compose run web bundle exec rspec spec
-
-after_script:
-  - docker-compose logs > ./log/docker-ci.log
-  - docker-compose down
+  - bundle exec rspec spec
