--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,8 @@ branches:
   only:
     - dev/wayne
 
-install:
-  # go to project folder
-  - cd ./wayne/stock_api_server/
-  - bundle install --without production
+before_install:
+  - cd ./wayne/auto_stock_server/
 
 before_script:
   - psql -c 'create database stock_api_server_test;' -U postgres    
