--- a/chloe/auto_stock_server/Gemfile
+++ b/chloe/auto_stock_server/Gemfile
@@ -17,6 +17,9 @@ group :assets do
   # gem 'therubyracer', :platforms => :ruby
 
   gem 'uglifier', '>= 1.0.3'
+
+  # use angular-rails-templates to add templates into Angular's $templateCache using Rails asset pipeline
+  gem 'angular-rails-templates', '~> 0.1.3'
 end
 
 gem 'jquery-rails'
@@ -53,6 +56,7 @@ gem 'bootstrap-sass', '~> 3.2.0'
 # Cron job in Ruby
 gem 'whenever', require: false
 
+# use angularjs-rails which wraps the Angular.js library for angular use
 gem 'angularjs-rails', '~> 1.4.7'
 
 group :test, :development do
