--- a/rebecca/stock-api-server/Gemfile
+++ b/rebecca/stock-api-server/Gemfile
@@ -30,6 +30,7 @@ gem 'jquery-rails'
 gem 'nokogiri', '~> 1.7.0.1'
 gem 'rubocop', '~> 0.47.1', require: false
 gem 'rufus-scheduler', '~> 3.3.4'
+gem 'slim-rails', '~> 3.1.2'
 
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
