replace ,html with ,slim

--- a/chloe/auto_stock_server/Gemfile
+++ b/chloe/auto_stock_server/Gemfile
@@ -59,6 +59,12 @@ gem 'whenever', require: false
 # use angularjs-rails which wraps the Angular.js library for angular use
 gem 'angularjs-rails', '~> 1.4.7'
 
+# use slim templates
+# slim tells Rails how to parse the Slim syntax.
+gem 'slim', '~> 3.0'
+# slim-rails overrides the Rails generators for ERB and replaces them with Slim generators.
+gem 'slim-rails', '~> 3.1'
+
 group :test, :development do
   # Use capybara to simulate the browser behavior for view test
   gem 'capybara', '2.12.0'
