fix travis.yml to exec db:migrate

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,3 +9,9 @@ branches:
 
 before_install:
   - cd ./rebecca/stock-api-server/
+
+before_script:
+  - bundle exec rake db:migrate RAILS_ENV=test
+
+script:
+  - bundle exec RAILS_ENV=test rspec
