fix rspec command not found

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ before_script:
   - bundle exec rake db:migrate RAILS_ENV=test
 
 script:
-  - bundle exec RAILS_ENV=test && rspec
+  - bundle exec rspec
