--- a/sean/stock_api_server/Gemfile
+++ b/sean/stock_api_server/Gemfile
@@ -21,6 +21,10 @@ end
 
 gem 'jquery-rails'
 
+group :development, :test do
+  gem 'rspec-rails', '~> 3.8'
+end
+
 # To use ActiveModel has_secure_password
 # gem 'bcrypt-ruby', '~> 3.0.0'
 
